--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <button class="SignInButton">Sign In</button>
         </div>
 
-        <div class="user-page" >
+        <div class="user-page" style="display: none">
           <div class="user-page-header">
             <div class="logout-btn">Log Out</div>
 
@@ -118,22 +118,19 @@
           <button class="start-quiz-btn">Start Quiz</button>
         </div>
 
-        <div class="quiz" style="display: none">
-          <h5 class="quiz-question"></h5>
-          <div class="quiz-answer-btns">
-            <button>One</button>
-            <button>Two</button>
-            <button>Three</button>
-            <button>Four</button>
+        <div class="quiz">
+          <div class="quiz-body">
+            <h5 class="quiz-question"></h5>
+            <div class="quiz-answer-btns">
+              <button class="quiz-answer-btn"></button>
+              <button class="quiz-answer-btn"></button>
+              <button class="quiz-answer-btn"></button>
+              <button class="quiz-answer-btn"></button>
+            </div>
+            <div class="quiz-question-next">Next</div>
           </div>
-          <div class="quiz-question-next">Next</div>
         </div>
-
-
-
-
       </div>
-
     </main>
 
     <script
