--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
         </div>
 
         <div class="quiz">
+          <div class="quiz-header">
+            <div class="correctanswer"></div>
+            <div class="quiz-timer">0:00</div>
+            <div class="incorrectanswer"></div>
+          </div>
+
           <div class="quiz-body">
             <h5 class="quiz-question"></h5>
             <div class="quiz-answer-btns">
