--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="quiz">
           <div class="quiz-header">
             <div class="correctanswer"></div>
-            <div class="quiz-timer">0:00</div>
+            <div class="quiz-timer"></div>
             <div class="incorrectanswer"></div>
           </div>
 
