--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <body>
     <main>
       <div class="account-page">
+
+        
         <div class="form-alert">
           <div>
             <i class="ri-alert-fill form-alert-icon"></i>
@@ -96,7 +98,7 @@
           <button class="SignInButton">Sign In</button>
         </div>
 
-        <div class="user-page" style="display: none">
+        <div class="user-page">
           <div class="user-page-header">
             <div class="logout-btn">Log Out</div>
 
@@ -122,7 +124,6 @@
           <div class="quiz-header">
             <div class="correctanswer"></div>
             <div class="quiz-timer"></div>
-            <div class="incorrectanswer"></div>
           </div>
 
           <div class="quiz-body">
@@ -136,6 +137,8 @@
             <div class="quiz-question-next">Next</div>
           </div>
         </div>
+
+
       </div>
     </main>
 
