--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
   <body>
     <main>
       <div class="account-page">
-
-        
         <div class="form-alert">
           <div>
             <i class="ri-alert-fill form-alert-icon"></i>
@@ -53,7 +51,10 @@
               id="signup-password"
               placeholder="Password"
               name="signuppassword"
+              class="password-input"
             />
+
+            <i class="passowrd-eye"></i>
           </label>
           <label
             for="signup-confirm-password"
@@ -65,7 +66,9 @@
               id="signup-confirm-password"
               placeholder="Confirm Password"
               name="signupconfirmpassword"
+              class="password-input"
             />
+            <i class="passowrd-eye"></i>
           </label>
           <button type="submit" class="signup-submit-btn">Sign_Up</button>
         </form>
@@ -88,7 +91,9 @@
               id="signin-password"
               placeholder="Password"
               name="signinpassword"
+              class="password-input"
             />
+            <i class="passowrd-eye"></i>
           </label>
           <button type="submit" class="signin-submit-btn">Sign_In</button>
         </form>
@@ -99,9 +104,6 @@
         </div>
 
         <div class="user-page">
-
-
-
           <div class="user-page-header">
             <div class="logout-btn">Log Out</div>
             <label for="confirm-email" class="confirm-email-label">
@@ -116,8 +118,6 @@
             <div class="deleteaccount-btn">Remove An Account</div>
           </div>
 
-
-          
           <div class="user-name">Heloo User</div>
 
           <button class="start-quiz-btn">Start Quiz</button>
@@ -140,8 +140,6 @@
             <div class="quiz-question-next">Next</div>
           </div>
         </div>
-
-
       </div>
     </main>
 
