--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
           <h1>Sign Up</h1>
           <label for="name" class="name-label">
             Name *
-            <input type="text" id="name" placeholder="Name" name="name" />
+            <input
+              type="text"
+              id="name"
+              placeholder="Name"
+              name="name"
+              value="Huaifa"
+            />
           </label>
           <label for="signup-email" class="signup-email-label">
             Email *
@@ -52,6 +58,7 @@
               placeholder="Password"
               name="signuppassword"
               class="password-input"
+              value="12345678"
             />
 
             <i class="passowrd-eye"></i>
@@ -67,6 +74,7 @@
               placeholder="Confirm Password"
               name="signupconfirmpassword"
               class="password-input"
+              value="12345678"
             />
             <i class="passowrd-eye"></i>
           </label>
@@ -92,6 +100,7 @@
               placeholder="Password"
               name="signinpassword"
               class="password-input"
+              value="12345678"
             />
             <i class="passowrd-eye"></i>
           </label>
@@ -110,6 +119,7 @@
               <label for="confirm-email" class="confirm-email-label">
                 Confirm Email *
                 <input
+                  value="huziafarazaa999@gmail.com"
                   type="email"
                   id="confirm-email"
                   placeholder="Email"
@@ -126,7 +136,10 @@
                   id="confirm-password-delete"
                   placeholder="Password"
                   name="deleteconfirmdelete"
+                  class="password-input"
+                  value="12345678"
                 />
+                <i class="passowrd-eye"></i>
               </label>
               <button type="submit" class="deleteaccount-btn">
                 Remove An Account
