--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
           <h1>Sign Up</h1>
           <label for="name" class="name-label">
             Name *
-            <input
-              type="text"
-              id="name"
-              placeholder="Name"
-              name="name"
-              value="Huaifa"
-            />
+            <input type="text" id="name" placeholder="Name" name="name" />
           </label>
           <label for="signup-email" class="signup-email-label">
             Email *
@@ -62,7 +56,6 @@
               placeholder="Password"
               name="signuppassword"
               class="password-input"
-              value="12345678"
             />
 
             <i class="passowrd-eye"></i>
@@ -78,7 +71,6 @@
               placeholder="Confirm Password"
               name="signupconfirmpassword"
               class="password-input"
-              value="12345678"
             />
             <i class="passowrd-eye"></i>
           </label>
@@ -104,7 +96,6 @@
               placeholder="Password"
               name="signinpassword"
               class="password-input"
-              value="12345678"
             />
             <i class="passowrd-eye"></i>
           </label>
@@ -118,7 +109,6 @@
               <label for="confirm-email" class="confirm-email-label">
                 Confirm Email *
                 <input
-                  value="huziafarazaa999@gmail.com"
                   type="email"
                   id="confirm-email"
                   placeholder="Email"
@@ -136,7 +126,6 @@
                   placeholder="Password"
                   name="deleteconfirmdelete"
                   class="password-input"
-                  value="12345678"
                 />
                 <i class="passowrd-eye"></i>
               </label>
@@ -153,7 +142,7 @@
 
         <div class="quiz">
           <div class="quiz-header">
-            <div class="correctanswer"></div>
+            <!-- <div class="correctanswer"></div> -->
             <div class="quiz-timer"></div>
           </div>
 
@@ -168,6 +157,10 @@
             <div class="quiz-question-next">Next</div>
           </div>
         </div>
+
+
+
+        
       </div>
     </main>
 
