--- a/index.html
+++ b/index.html
@@ -37,11 +37,18 @@
           <h1>Sign Up</h1>
           <label for="name" class="name-label">
             Name *
-            <input type="text" id="name" placeholder="Name" name="name" />
+            <input
+              autocomplete="off"
+              type="text"
+              id="name"
+              placeholder="Name"
+              name="name"
+            />
           </label>
           <label for="signup-email" class="signup-email-label">
             Email *
             <input
+              autocomplete="off"
               type="email"
               id="signup-email"
               placeholder="Email"
@@ -51,6 +58,7 @@
           <label for="signup-password" class="signup-password-label">
             Password *
             <input
+              autocomplete="off"
               type="password"
               id="signup-password"
               placeholder="Password"
@@ -66,6 +74,7 @@
           >
             Confirm Password *
             <input
+              autocomplete="off"
               type="password"
               id="signup-confirm-password"
               placeholder="Confirm Password"
@@ -82,6 +91,7 @@
           <label for="signin-email" class="signin-email-label">
             Email *
             <input
+              autocomplete="off"
               type="email"
               id="signin-email"
               placeholder="Email"
@@ -91,6 +101,7 @@
           <label for="signin-password" class="signin-password-label">
             Password *
             <input
+              autocomplete="off"
               type="password"
               id="signin-password"
               placeholder="Password"
@@ -109,6 +120,7 @@
               <label for="confirm-email" class="confirm-email-label">
                 Confirm Email *
                 <input
+                  autocomplete="off"
                   type="email"
                   id="confirm-email"
                   placeholder="Email"
@@ -121,6 +133,7 @@
               >
                 Confirm Password *
                 <input
+                  autocomplete="off"
                   type="password"
                   id="confirm-password-delete"
                   placeholder="Password"
